# BorsdataAPI

./: .gitignore  README.md  pyproject.toml  requirements.txt
borsdata/: borsdata_api.py  borsdata_client.py  constants.py  excel_exporter.py
tests/: test_borsdata.py
