[tool.poetry]
name = "borsdata"
version = "0.1.0"
description = ""
authors = ["William Orton Sorensen <william.orton.sorensen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
pandas = "^2.2.2"
requests = "^2.32.3"
openpyxl = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
